--- a/docs/_includes/bootstrap_css.html
+++ b/docs/_includes/bootstrap_css.html
@@ -6,9 +6,9 @@
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
 <!-- icons stylesheet -->
 <script defer src="https://use.fontawesome.com/releases/v5.8.1/js/all.js" integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ" crossorigin="anonymous"></script>
-<!--<script src="https://use.fontawesome.com/releases/v5.8.1/js/all.js" data-auto-replace-svg="nest"></script>
+<!--<script src="https://use.fontawesome.com/releases/v5.8.1/js/all.js" data-auto-replace-svg="nest"></script>-->
 <style type="text/css">
-	/* defining custom icons for alpha & beta */
+	/* defining custom icons for alpha & beta 
 	.fa-alpha:before {
     font-weight: 700;
     content: '\03b1';
@@ -16,6 +16,115 @@
 	.fa-beta:before {
     font-weight: 700;
     content: '\03b2';
-}
-</style>-->
+}*/
+/* defining custom colors for use on the site */
+	.text-sr-primary {
+		color: lightseagreen; /* Hex = 20B2AA */
+	}
+	.btn.btn-sr-primary {
+		background-color: lightseagreen; /* Hex = 20B2AA */
+		border-color: lightseagreen;
+	}
+	.btn.btn-sr-primary:hover:not([disabled]) {
+		filter: brightness(85%);
+	}
+
+	.text-sr-secondary {
+		color: teal; /* Hex = 008080 */
+	}
+	.btn.btn-sr-secondary {
+		background-color: teal; /* Hex = 008080 */
+		border-color: teal;
+	}
+	.btn.btn-sr-secondary:hover:not([disabled]) {
+		filter: brightness(85%);
+	}
+
+	.text-sr-link {
+		color: turquoise; /* Hex = 40E0D0 */
+	}
+	.btn.btn-sr-link {
+		background-color: turquoise; /* Hex = 40E0D0 */
+		border-color: turquoise;
+	}
+	.btn.btn-sr-link:hover:not([disabled]) {
+		filter: brightness(85%);
+	}
+
+	.text-sr-dark {
+		color: dimgray; /* Hex = 696969 */      /* nice */
+	}
+	.btn.btn-sr-dark {
+		background-color: dimgray; /* Hex = 696969 */      /* nice */
+		border-color: dimgray;
+	}
+	.btn.btn-sr-dark:hover:not([disabled]) {
+		filter: brightness(85%);
+	}
+
+	.text-sr-light {
+		color: gainsboro; /* Hex = DCDCDC */
+	}
+	.btn.btn-sr-light {
+		background-color: gainsboro; /* Hex = DCDCDC */
+		border-color: gainsboro;
+	}
+	.btn.btn-sr-light:hover:not([disabled]) {
+		filter: brightness(85%);
+	}
+
+	.text-sr-info {
+		color: slateblue; /* Hex = 6A5ACD */
+	}
+	.btn.btn-sr-info {
+		background-color: slateblue; /* Hex = 6A5ACD */
+		border-color: slateblue;
+	}
+	.btn.btn-sr-info:hover:not([disabled]) {
+		filter: brightness(85%);
+	}
+
+	.text-sr-danger {
+		color: crimson; /* Hex = DC143C */
+	}
+	.btn.btn-sr-danger {
+		background-color: crimson; /* Hex = DC143C */
+		border-color: crimson;
+	}
+	.btn.btn-sr-danger:hover:not([disabled]) {
+		filter: brightness(85%);
+	}
+
+	/*
+	ul.nav li a, ul.nav li a:visited {
+    color: darkturquoise !important;
+	}
+
+	ul.nav li a:hover, ul.nav li a:active {
+	    color: mediumturquoise !important;
+	}
+
+	ul.nav li.active a {
+	    color: dimgray !important;
+	}*/
+	a {
+		color: darkturquoise;
+	}
+	a:hover {
+		color: mediumturquoise;
+	}
+	a:visited {
+		color: darkturquoise;
+	}
+	a:active {
+		color: turquoise;
+	}
+	a.nav-link.active {
+		color: turquoise !important;
+	}
+	a.nav-item.nav-link.active {
+		color: lightseagreen !important;
+		font-weight: 500 !important;
+	}
+</style>
 <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css" integrity="sha256-gsmEoJAws/Kd3CjuOQzLie5Q3yshhvmo7YNtBG7aaEY=" crossorigin="anonymous">-->
