--- a/docs/_includes/dbtable.html
+++ b/docs/_includes/dbtable.html
@@ -1,14 +1,14 @@
 <!--<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.1.1/css/responsive.bootstrap.min.css">-->
 <div>
 	<!-- nav tabs -->
-	<ul class="nav nav-tabs nav-fill" role="tablist" id=tables-tablist>
+	<ul class="nav nav-tabs d-flex nav-fill nav-justified" role="tablist" id=tables-tablist style="margin-left:0px">
 		<li class="nav-item"><a id="current-tab" class="nav-link" href="#current-panel" aria-controls="current" role="tab" data-toggle="tab">Current</a></li>
 		<li class="nav-item"><a id="past-tab" class="nav-link" href="#past-panel" aria-controls="past" role="tab" data-toggle="tab"></a></li>
 		<li class="nav-item"><a id="alltime-tab" class="nav-link" href="#alltime-panel" aria-controls="alltime" role="tab" data-toggle="tab">All-Time</a></li>
 	</ul>
 
 	<!-- tab contents -->
-	<div class="tab-content">
+	<div class="tab-content border border-top-0">
 		<div role="tabpanel" class="tab-pane fade" id="current-panel" aria-labelledby="current-tab">
 			<table id="current-table" class="table table-striped table-bordered hover" cellspacing="0" width="100%">
 				<!-- table header -->
