--- a/docs/_includes/player_search.html
+++ b/docs/_includes/player_search.html
@@ -1,14 +1,14 @@
 <div class="container">
     <div class="row">
         <form class="col-md-6 py-2">
-            <h5>Player Search</h5>
+            <!--<h5>Player Search</h5>-->
             <div class="input-group" id="player_searchbar">
                 <input type="text" class="form-control typeahead" id="query" placeholder="Search..." data-provide="typeahead" autocomplete="on">
-                <!--<div class="input-group-append">
-                    <button type="submit" class="btn btn-outline-primary">
-                        <i class="fa fa-search"></i>
+                <div class="input-group-append">
+                    <button type="submit" class="btn btn-outline-secondary">
+                        <i class="fas fa-search"></i>
                     </button>
-                </div>-->
+                </div>
             </div>
         </form>
     </div>
