--- a/docs/_layouts/pretty.html
+++ b/docs/_layouts/pretty.html
@@ -6,20 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 {% seo %}
+    <link rel="icon" href="/assets/images/site_icons/sr_logo_minimal.png">
+    <link rel="apple-touch-icon" sizes="128x128" href="/assets/images/site_icons/sr_logo_touch_icon.png">
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     {% include bootstrap_css.html %}
     {% include bootstrap_scripts.html %}
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
+    <style type="text/css">
+    </style>
   </head>
   <body>
-    <div class="wrapper">
+    <div class="container" style="width:65vw;">
       <header>
         {% include navigation.html %}
-        {% if page.url == "/" %}
-          <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
-          {% endif %}
         
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
