--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -23,7 +23,7 @@
             <i class="fab fa-fw fa-twitter"></i>
             <span class="username">TheLoaneRanger</span>
           </a></li>
-        <li>
+        <!--<li>
           <a href="">
             <i class="fab fa-fw fa-paypal"></i>
             <span class="username">Paypal [Coming Soon]</span>
@@ -32,16 +32,16 @@
           <a href="">
             <i class="fab fa-fw fa-patreon"></i>
             <span class="username">Patreon [Coming Soon]</span>
-          </a></li>
+          </a></li>-->
         <li>
           <a href="https://ko-fi.com/iago27">
             <!--<i class="fab fa-kofi"></i>-->
             <!--<img height="20" width="20" color="111111" src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/ko-fi.svg" />-->
             <div class="fa-stack fa-fw fa-xs">
-              <i class="fas fa-coffee fa-stack-2x" data-fa-transform="shrink-2"></i>
-              <i class="fas fa-heart fa-stack-1x" data-fa-transform="shrink-5 up-2 left-1" style="color:white"></i>
+              <i class="fas fa-coffee fa-stack-2x" data-fa-transform="shrink-2 down-2"></i>
+              <i class="fas fa-heart fa-stack-1x" data-fa-transform="shrink-5 down-1 left-1" style="color:white"></i>
             </div>
-            <span class="username">Ko-Fi [Coming Soon]</span>
+            <span class="username">Ko-Fi</span>
           </a></li>
         </ul></div>
     </div>
