--- a/docs/_includes/game_directory.html
+++ b/docs/_includes/game_directory.html
@@ -77,16 +77,16 @@
 	        		<!--</a>-->
     			</div>
     			<div class="col">
-    				<!--<a href="tourneys/" class="text-decoration-none">-->
+    				<a href="events/" class="text-decoration-none">
 	    				<div class="btn-group" role="group" id="event_button_group">
-	        				<button type="button" class="btn btn-dark btn-sr-dark" id="event_icon_button" disabled>
+	        				<button type="button" class="btn btn-dark btn-sr-dark" id="event_icon_button">
 	        					<span class="fa-stack fa-1x">
 	        						<i class="fas fa-calendar"></i>
 	        					</span>
 	        				</button>
-	        				<button type="button" class="btn btn-lg btn-sr-primary btn-info" id="event_button" disabled>Events<p class="text-light font-weight-light"> [Coming Soon]</p></button>
+	        				<button type="button" class="btn btn-lg btn-sr-primary btn-info" id="event_button">Events</button>
 	        			</div>
-        			<!--</a>-->
+        			</a>
     			</div>
     		</div>
     	</div>
